--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,22 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <form method="POST" action="/team">
+     <label for="name">Team Name:</label>
+     <input id="name" type="text" name="name"><br>
+     <label for="coach">Coach:</label>
+     <input id="coach" type="text" name="coach"><br>
+     <label for="pg">Point Guard:</label>
+     <input id="pg" type="text" name="pg"><br>
+     <label for="sg">Shooting Guard:</label>
+     <input id="sg" type="text" name="sg"><br>
+     <label for="sf">Small Forward:</label>
+     <input id="sf" type="text" name="sf"><br>
+     <label for="pf">Power Forward:</label>
+     <input id="pf" type="text" name="pf"><br>
+     <label for="c">Center:</label>
+     <input id="c" type="text" name="c"><br>
+     <input id="Submit" type="Submit">
+   </form>
  </body>
 </html>
-
-
