Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,10 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <p><%= "Team Name: #{params[:name]}" %></h1>
+   <p><%= "Team Name: #{params[:name]}" %></p>
+   <p><%= "Coach: #{params[:coach]}" %></p>
+   <p><%= "Point Guard: #{params[:pg]}" %></p>
+   
 
  </body>
 </html>
